Code cleaned up

--- a/templates/cart_page.html
+++ b/templates/cart_page.html
@@ -108,5 +108,5 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ url_for('static', filename='js/cart_v1142.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/cart_v2js') }}"></script>
 {% endblock %}
