--- a/templates/goods_one_page.html
+++ b/templates/goods_one_page.html
@@ -288,5 +288,5 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ url_for('static', filename='js/goods_6.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/goods_v2.js') }}"></script>
 {% endblock %}
