--- a/templates/goods_list_page.html
+++ b/templates/goods_list_page.html
@@ -49,12 +49,21 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4">
             {% for goods in goods_items.items %}
                 <div class="col mb-4">
-                    <div class="card">
+                    {% if goods.is_visible %}
+                        <div class="card h-100">
+                    {% else %}
+                        <div class="card text-muted h-100">
+                    {% endif %}
                         <a href="{{ url_for('goods_one_page', goods_id=goods.id) }}"
                            class="btn-img">
                             <div class="img-wrap rounded">
-                                <img src="{{ url_for('static', filename=goods.img_file_path) }}"
+                                {% if goods.is_visible %}
+                                    <img src="{{ url_for('static', filename=goods.img_file_path) }}"
                                      class="card-img-top" alt="...">
+                                {% else %}
+                                    <img src="{{ url_for('static', filename=goods.img_file_path) }}"
+                                     class="card-img-top" alt="..." style="opacity: 50%">
+                                {% endif %}
                             </div>
                         </a>
                         <div class="card-body">
@@ -77,7 +86,11 @@
                                             <input type="text" class="quantity-input" name="amount" value=1>
                                             <input type="button" class="quantity-controls quantity-plus" value="+">
                                         </div>
-                                        <button type="submit" class="btn btn-success">Купить</button>
+                                        {% if goods.is_visible %}
+                                            <button type="submit" class="btn btn-success">Купить</button>
+                                        {% else %}
+                                            <button type="submit" class="btn btn-secondary disabled">Купить</button>
+                                        {% endif %}
                                     </div>
                                 </form>
                             </div>
@@ -88,10 +101,18 @@
                                        class="btn btn-warning">
                                         <i class="fa fa-edit"></i>
                                     </a>
-                                    <a href="{{ url_for('delete_goods', goods_id=goods.id) }}"
-                                       class="btn btn-danger ms-2">
-                                        <i class="fa fa-trash"></i>
-                                    </a>
+
+                                    {% if goods.is_visible %}
+                                        <a href="{{ url_for('set_goods_hidden', goods_id=goods.id, is_hidden=1, next=request.path) }}"
+                                           class="btn btn-danger ms-2">
+                                            <i class="fa fa-eye-slash"></i>
+                                        </a>
+                                    {% else %}
+                                        <a href="{{ url_for('set_goods_hidden', goods_id=goods.id, is_hidden=0, next=request.path) }}"
+                                           class="btn btn-success ms-2">
+                                            <i class="fa fa-eye"></i>
+                                        </a>
+                                    {% endif %}
                                 {% endif %}
                             </div>
                         </div>
