--- a/templates/orders_page.html
+++ b/templates/orders_page.html
@@ -22,20 +22,28 @@
                             {{ order.status.full_name }}
                         </div>
                     </div>
-                    <div class="track">
-                        <div class="step {{ 'active' if order.status.id >= 1 else '' }}"><span class="icon"> <i
-                                class="fa fa-check"></i> </span> <span
-                                class="text"> Заказ принят </span></div>
-                        <div class="step {{ 'active' if order.status.id >= 2 else '' }}"><span class="icon"> <i
-                                class="fa fa-user"></i> </span> <span
-                                class="text"> Передан курьеру </span></div>
-                        <div class="step {{ 'active' if order.status.id >= 3 else '' }}"><span class="icon"> <i
-                                class="fa fa-truck"></i> </span> <span
-                                class="text"> В пути </span></div>
-                        <div class="step {{ 'active' if order.status.id >= 4 else '' }}"><span class="icon"> <i
-                                class="fa fa-box-open"></i> </span> <span
-                                class="text"> Доставлен </span></div>
-                    </div>
+                    {% if order.status %}
+                        <div class="track">
+                            <div class="step {{ 'active' if order.status.id >= 1 else '' }}"><span class="icon"> <i
+                                    class="fa fa-check"></i> </span> <span
+                                    class="text"> Заказ принят </span></div>
+                            <div class="step {{ 'active' if order.status.id >= 2 else '' }}"><span class="icon"> <i
+                                    class="fa fa-user"></i> </span> <span
+                                    class="text"> Передан курьеру </span></div>
+                            <div class="step {{ 'active' if order.status.id >= 3 else '' }}"><span class="icon"> <i
+                                    class="fa fa-truck"></i> </span> <span
+                                    class="text"> В пути </span></div>
+                            <div class="step {{ 'active' if order.status.id >= 4 else '' }}"><span class="icon"> <i
+                                    class="fa fa-box-open"></i> </span> <span
+                                    class="text"> Доставлен </span></div>
+                        </div>
+                    {% else %}
+                        <p class="text-danger">
+                            У данного заказа отсутствует атрибут Status.
+                            Скорее всего, произошла какая-то ошибка.
+                            Пожалуйста, обратитесь к администратору!
+                        </p>
+                    {% endif %}
                 </div>
             </article>
         {% endfor %}
