--- a/templates/goods_edit_page.html
+++ b/templates/goods_edit_page.html
@@ -206,5 +206,5 @@
     </div>
 {% endblock content %}
 {% block scripts %}
-    <script src="{{ url_for('static', filename='js/add_goods_v2_016.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/add_goods.js') }}"></script>
 {% endblock %}
