--- a/templates/base.html
+++ b/templates/base.html
@@ -148,7 +148,7 @@
         crossorigin="anonymous"></script>
 
 <!-- Custom scripts -->
-<script src="{{ url_for('static', filename='js/main_v1.js') }}"></script>
+<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 
 {% block scripts %}
 {% endblock %}
